--- a/style.css
+++ b/style.css
@@ -19,25 +19,30 @@ body {
   font-size: 14px;
   color: var(--Grey);
   line-height: 25px;
+  font-weight: 500;
 }
 .textbox {
   background-color: var(--White);
   display: flex;
-  margin: 200px;
+  margin: 250px;
 }
 
 #product {
-  width: 50%;
+  width: 500px;
+  height: 500px;
 }
 h1 {
   font-family: "Fraunces", serif;
   color: var(--Black);
-  /* margin: 10px; */
-  /* padding: 10px; */
+  margin-bottom: 20px;
+  margin-left: 20px;
 }
-#perfume {
-  width: 50%;
+.p {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  margin-left: 20px;
 }
+
 /* Button */
 
 button {
@@ -50,12 +55,14 @@ button {
   padding: 10px 40px;
   border-radius: 5px;
   border-color: var(--Green-700);
+  margin-top: 20px;
+  margin-left: 20px;
 }
 img {
   margin-right: 10px;
   width: 10px;
 }
-button p {
+#button {
   font-size: 10px;
   color: var(--White);
 }
@@ -72,12 +79,13 @@ button p {
   font-weight: 800;
   margin-right: 15px;
   font-size: 30px;
-  /* padding: 10px;
-  margin: 10px; */
+  margin-bottom: 10px;
+  margin-left: 20px;
 }
 #before {
   font-size: x-small;
   text-decoration: line-through;
   color: var(--Grey);
   font-size: 15px;
+  margin-bottom: 10px;
 }
